[package]
name = "crown"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.0" 
belly = {git = "https://github.com/jkb0o/belly.git"}
bevy_egui = "0.20"
bevy-inspector-egui = "0.18"
bevy_mod_picking = "0.14"
bevy_panorbit_camera = "0.5.0"
image = "*"
winit = "0.28.6"
[workspace]
resolver = "2" 
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3